// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`interested-party-comments GET /add-document GET /add-document should render the add document details page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds top-errors-hook"></div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Upload supporting document</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <div class="govuk-grid-row pins-file-upload" data-next-page-url="/appeals-service/appeal-details/2/interested-party-comments/5/add-document/redaction-status"
            data-form-id="1" data-case-id="2" data-case-reference="APP/Q9999/D/21/351062"
            data-folder-id="1234" data-document-type="attachments" data-document-stage="representation"
            data-blob-storage-host="https://127.0.0.1:10000/devstoreaccount1" data-blob-storage-container="document-service-uploads"
            data-document-title="interested party comment document" data-allowed-types="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-outlook,image/jpeg,image/jpeg,video/mpeg,audio/mpeg,video/mp4,video/quicktime,image/png,image/tiff,image/tiff"
            data-formatted-allowed-types="PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX, MSG, JPG, JPEG, MPEG, MP3, MP4, MOV, PNG, TIF or TIFF">
                <form method="POST" novalidate="novalidate" class="govuk-grid-column-two-thirds"
                data-filenames-in-folder="">
                    <div class="pins-file-upload__container">
                        <div class="govuk-body pins-file-upload__instructions"><span>The file must be a PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX, MSG, JPG, JPEG, MPEG, MP3, MP4, MOV, PNG, TIF or TIFF and smaller than 250MB.</span>
                        </div>
                        <div class="middle-errors-hook">
                            <h2 class="pins-file-upload__container-title">Upload supporting document</h2>
                            <div class="pins-file-upload__upload">
                                <input class="display--none" id="upload-file-1" accept="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-outlook,image/jpeg,image/jpeg,video/mpeg,audio/mpeg,video/mp4,video/quicktime,image/png,image/tiff,image/tiff"
                                type="file" name="files" value="Choose file" aria-controls="file-list-1">
                                <div>
                                    <button type='button' class="pins-file-upload__button govuk-button--secondary"
                                    data-cy="upload-file-button" id="upload-file-button-1">Choose file</button><span class='govuk-body pins-file-upload__dropzone-text'>or drop file</span>
                                </div>
                            </div>
                            <div id="file-list-1">
                                <h2 class="display--sr-only" id="file-list-title-1">List of files to upload</h2>
                                <ul class="pins-file-upload__files-rows" aria-describedby="file-list-title-1"
                                aria-live="polite"></ul>
                            </div>
                        </div>
                    </div>
                    <div class="display--flex">
                        <button type="submit" class="govuk-button pins-file-upload__submit" data-module="govuk-button"
                        id="submit-button-1">Continue</button>
                        <div class="progress-hook"></div>
                    </div>
                </form>
            </div>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /add-document GET /add-document/date-submitted should render the date submitted page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="date-hint">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When was the supporting document submitted?</h1>
                                </legend>
                                <div id="date-hint" class="govuk-hint">
                                    <div class="govuk-hint">For example, 27 3 2024</div>
                                </div>
                                <div class="govuk-date-input" id="date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="date-day" name="date-day" type="text" value="26" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="date-month" name="date-month" type="text" value="8" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="date-year" name="date-year" type="text" value="2025" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /add-document GET /add-document/redaction-status should render the redaction status page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Redaction status</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="redactionStatus" name="redactionStatus"
                                        type="radio" value="redacted">
                                        <label class="govuk-label govuk-radios__label" for="redactionStatus">Redacted</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="redactionStatus-2" name="redactionStatus"
                                        type="radio" value="not_redacted">
                                        <label class="govuk-label govuk-radios__label" for="redactionStatus-2">Unredacted</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="redactionStatus-3" name="redactionStatus"
                                        type="radio" value="no_redaction_required">
                                        <label class="govuk-label govuk-radios__label" for="redactionStatus-3">No redaction required</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /manage-documents/:folderId/ should render a 404 error page if the folderId is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Page not found</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">If you typed the web address, check it is correct.</p>
            <p class="govuk-body">If you pasted the web address, check you copied the entire address.</p>
            <p             class="govuk-body">If the web address is correct or you selected a link or button, <a href="https://intranet.planninginspectorate.gov.uk/task/report-it-problem/"
                class="govuk-link">report an IT problem.</a>
                </p>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /manage-documents/:folderId/ should render manage folder page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Manage folder</span>
            <h1 class="govuk-heading-l">Supporting documents</h1>
        </div>
    </div><a href="/appeals-service/appeal-details/2/interested-party-comments/5/add-document"
    role="button" draggable="false" class="govuk-button govuk-button--secondary"
    data-module="govuk-button"> Add document</a>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <table class="govuk-table" id="documents-table">
                <thead class="govuk-table__head">
                    <tr class="govuk-table__row">
                        <th scope="col" class="govuk-table__header">Name</th>
                        <th scope="col" class="govuk-table__header">Date submitted</th>
                        <th scope="col" class="govuk-table__header">Redaction status</th>
                        <th scope="col" class="govuk-table__header">Actions</th>
                    </tr>
                </thead>
                <tbody class="govuk-table__body">
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell">
                            <div class="govuk-!-margin-bottom-4"><a class="govuk-link" href="/documents/1/download/15d19184-155b-4b6c-bba6-2bd2a61ca9a3/test-pdf-documentFolderInfo.pdf"
                                target="_blank">test-pdf-documentFolderInfo.pdf</a>
                            </div>
                            <dl class="govuk-body govuk-!-font-size-16 pins-inline-definition-list"><dt>File type and size:&nbsp;</dt>
                                <dd>PDF, 129 KB</dd>
                            </dl>
                        </td>
                        <td class="govuk-table__cell">1 February 2023</td>
                        <td class="govuk-table__cell">No redaction required</td>
                        <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/2/interested-party-comments/5/manage-documents/1/15d19184-155b-4b6c-bba6-2bd2a61ca9a3"
                            class="govuk-link">View and edit <span class="govuk-visually-hidden">test-pdf-documentFolderInfo.pdf</span></a>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell">
                            <div class="govuk-!-margin-bottom-4"><a class="govuk-link" href="/documents/1/download/47d8f073-c837-4f07-9161-c1a5626eba56/sample-20s-documentFolderInfo.mp4"
                                target="_blank">sample-20s-documentFolderInfo.mp4</a>
                            </div>
                            <dl class="govuk-body govuk-!-font-size-16 pins-inline-definition-list"><dt>File type and size:&nbsp;</dt>
                                <dd>MP4, 11.8 MB</dd>
                            </dl>
                        </td>
                        <td class="govuk-table__cell">2 March 2024</td>
                        <td class="govuk-table__cell">No redaction required</td>
                        <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/2/interested-party-comments/5/manage-documents/1/47d8f073-c837-4f07-9161-c1a5626eba56"
                            class="govuk-link">View and edit <span class="govuk-visually-hidden">sample-20s-documentFolderInfo.mp4</span></a>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /manage-documents/:folderId/:documentId should render a 404 error page if the folderId is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Page not found</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">If you typed the web address, check it is correct.</p>
            <p class="govuk-body">If you pasted the web address, check you copied the entire address.</p>
            <p             class="govuk-body">If the web address is correct or you selected a link or button, <a href="https://intranet.planninginspectorate.gov.uk/task/report-it-problem/"
                class="govuk-link">report an IT problem.</a>
                </p>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /manage-documents/:folderId/:documentId should render manage document page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-5">
            <div class="govuk-notification-banner govuk-!-margin-bottom-5" role="region"
            aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
                <div class="govuk-notification-banner__header">
                    <h3 class="govuk-notification-banner__title" id="govuk-notification-banner-title"> Important</h3>
                </div>
                <div class="govuk-notification-banner__content">
                    <h1 class="govuk-notification-banner__heading govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-0">Virus scan in progress</h1><a class="govuk-notification-banner__link" href="" data-cy="refresh-page">Refresh page to see if scan has finished</a>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Manage versions</span>
            <h1 class="govuk-heading-l">test-pdf-documentFileVersionsInfo.pdf</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Name</dt>
                    <dd class="govuk-summary-list__value">
                        <div class="govuk-!-margin-bottom-2"><span class="govuk-body">test-pdf-documentFileVersionsInfo.pdf</span>
                        </div>
                        <div class="govuk-!-margin-bottom-1"><strong class="govuk-tag govuk-tag--yellow">Virus scanning</strong>
                        </div>
                    </dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/5/manage-documents/change-document-name/1/1">Change<span class="govuk-visually-hidden"> test-pdf-documentFileVersionsInfo.pdf name</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Version</dt>
                    <dd class="govuk-summary-list__value">1</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date submitted</dt>
                    <dd class="govuk-summary-list__value">1 February 2023</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/5/manage-documents/change-document-details/1/1">Change<span class="govuk-visually-hidden"> test-pdf-documentFileVersionsInfo.pdf date received</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Redaction status</dt>
                    <dd class="govuk-summary-list__value">Redacted</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/5/manage-documents/change-document-details/1/1">Change<span class="govuk-visually-hidden"> test-pdf-documentFileVersionsInfo.pdf redaction status</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <h2>Document versions</h2>
            <p class="govuk-body">View and remove versions of this document</p>
            <details class="govuk-details">
                <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Version history</span>
                </summary>
                <div class="govuk-details__text">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Version</th>
                                <th scope="col" class="govuk-table__header">Name</th>
                                <th scope="col" class="govuk-table__header">Activity</th>
                                <th scope="col" class="govuk-table__header">Redaction status</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">1</td>
                                <td class="govuk-table__cell">
                                    <div class="govuk-!-margin-bottom-2"><span class="govuk-body">test-pdf-documentFileVersionsInfo.pdf</span>
                                    </div><strong class="govuk-tag govuk-tag--blue single-line govuk-!-margin-bottom-2">Current version</strong>
                                    <div                                     class="govuk-!-margin-bottom-2"><strong class="govuk-tag govuk-tag--yellow">Virus scanning</strong>
                </div>
                </td>
                <td class="govuk-table__cell">
                    <p class="govuk-body"><strong>Create</strong>: 13:14, 31 October 2023,
                        <br>by John Smith</p>
                </td>
                <td class="govuk-table__cell">Redacted</td>
                <td class="govuk-table__cell"></td>
                </tr>
                </tbody>
                </table>
        </div>
        </details>
    </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /reject/check-your-answers should render check your answers page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and reject comment</h1>
        </div>
    </div>
    <dl class="govuk-summary-list">
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">
                <div class="pins-show-more">Awaiting review comment 47</div>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">No documents</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/add-document/?backUrl=/interested-party-comments/3670/reject/check-your-answers">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Review decision</dt>
            <dd class="govuk-summary-list__value">Comment rejected</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/review">Change<span class="govuk-visually-hidden"> review decision</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Why are you rejecting the comment?</dt>
            <dd             class="govuk-summary-list__value">
                <div class="pins-show-more" data-label="Read more" data-mode="text"></div>
                </dd>
                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/reject/select-reason?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F2%2Finterested-party-comments%2F3670%2Freject%2Fselect-reason">Change<span class="govuk-visually-hidden"> why you are rejecting the comment</span></a>
                </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Do you want to allow the interested party to resubmit a comment?</dt>
            <dd             class="govuk-summary-list__value">No</dd>
                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/reject/allow-resubmit?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F2%2Finterested-party-comments%2F3670%2Freject%2Fallow-resubmit">Change<span class="govuk-visually-hidden"> if you want to allow the interested party to resubmit a comment</span></a>
                </dd>
        </div>
    </dl>
    <div class="govuk-grid-row govuk-grid-column-two-thirds">
        <p class="govuk-body">We will send an email to the interested party to explain why you rejected
            their comment.</p>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form method="post" novalidate="novalidate">
                <button type="submit" class="govuk-button" data-module="govuk-button">Reject comment</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /reject/select-reason should render reject comment page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" aria-describedby="rejection-reason-hint">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why are you rejecting the comment?</h1>
                        </legend>
                        <div id="rejection-reason-hint" class="govuk-hint">Select all that apply.</div>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason" name="rejectionReason"
                                type="checkbox" value="1">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason">Received after deadline</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-2" name="rejectionReason"
                                type="checkbox" value="2">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-2">Includes personal and/or medical information</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-3" name="rejectionReason"
                                type="checkbox" value="3">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-3">Includes inflammatory content</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-4" name="rejectionReason"
                                type="checkbox" value="4">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-4">Duplicated comment</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-5" name="rejectionReason"
                                type="checkbox" value="5">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-5">Not relevant to this appeal</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-6" name="rejectionReason"
                                type="checkbox" value="6">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-6">Contains links to web pages</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-7" name="rejectionReason"
                                type="checkbox" value="7" data-aria-controls="conditional-rejection-reason-7">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-7">Other</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-rejection-reason-7">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="rejection-reason-7-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="rejection-reason-7-1" name="rejectionReason-7" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /review-comment with data should render review comment page with email not provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Review comment</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
                    <dd class="govuk-summary-list__value">Lee Thornton</dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Email</dt>
                    <dd class="govuk-summary-list__value">Not provided</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
                    <dd class="govuk-summary-list__value">Not provided</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/edit/address?review=true&amp;editAddress=false">Add<span class="govuk-visually-hidden"> address</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> When did the interested party submit the comment?</dt>
                    <dd                     class="govuk-summary-list__value">9 October 2024</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
                    <dd class="govuk-summary-list__value">Awaiting review comment 47</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value">No documents</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/add-document">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                        <div class="govuk-checkboxes__item">
                            <input class="govuk-checkboxes__input" id="site-visit-request" name="site-visit-request"
                            type="checkbox" value="site-visit">
                            <label class="govuk-label govuk-checkboxes__label" for="site-visit-request">Comment includes a site visit request</label>
                        </div>
                    </div>
                </div>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept comment</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="valid_requires_redaction">
                                <label class="govuk-label govuk-radios__label" for="status-2">Redact and accept comment</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-3" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-3">Reject comment</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /review-comment with data should render review comment page with redact and accept radio button hidden when no comment provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Review comment</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
                    <dd class="govuk-summary-list__value">Lee Thornton</dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Email</dt>
                    <dd class="govuk-summary-list__value">test1@example.com</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
                    <dd class="govuk-summary-list__value">Not provided</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/edit/address?review=true&amp;editAddress=false">Add<span class="govuk-visually-hidden"> address</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> When did the interested party submit the comment?</dt>
                    <dd                     class="govuk-summary-list__value">9 October 2024</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
                    <dd class="govuk-summary-list__value"></dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value">No documents</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/add-document">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                        <div class="govuk-checkboxes__item">
                            <input class="govuk-checkboxes__input" id="site-visit-request" name="site-visit-request"
                            type="checkbox" value="site-visit">
                            <label class="govuk-label govuk-checkboxes__label" for="site-visit-request">Comment includes a site visit request</label>
                        </div>
                    </div>
                </div>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept comment</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-2">Reject comment</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /review-comment with data should render review comment page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Review comment</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
                    <dd class="govuk-summary-list__value">Lee Thornton</dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Email</dt>
                    <dd class="govuk-summary-list__value">test1@example.com</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
                    <dd class="govuk-summary-list__value">Not provided</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/edit/address?review=true&amp;editAddress=false">Add<span class="govuk-visually-hidden"> address</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> When did the interested party submit the comment?</dt>
                    <dd                     class="govuk-summary-list__value">9 October 2024</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
                    <dd class="govuk-summary-list__value">Awaiting review comment 47</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value">No documents</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/add-document">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                        <div class="govuk-checkboxes__item">
                            <input class="govuk-checkboxes__input" id="site-visit-request" name="site-visit-request"
                            type="checkbox" value="site-visit">
                            <label class="govuk-label govuk-checkboxes__label" for="site-visit-request">Comment includes a site visit request</label>
                        </div>
                    </div>
                </div>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept comment</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="valid_requires_redaction">
                                <label class="govuk-label govuk-radios__label" for="status-2">Redact and accept comment</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-3" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-3">Reject comment</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /view-comment with data should render view comment page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">View comment</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
                    <dd class="govuk-summary-list__value">Lee Thornton</dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Email</dt>
                    <dd class="govuk-summary-list__value">test1@example.com</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
                    <dd class="govuk-summary-list__value">Not provided</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/edit/address?review=false&amp;editAddress=false">Add<span class="govuk-visually-hidden"> address</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site visit requested</dt>
                    <dd class="govuk-summary-list__value">No</dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> When did the interested party submit the comment?</dt>
                    <dd                     class="govuk-summary-list__value">9 October 2024</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
                    <dd class="govuk-summary-list__value">Awaiting review comment 47</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/redact">Redact</a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value">No documents</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/add-document">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET change-document-details/:folderId/:documentId should render change document details page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Change document details</span>
            <h1 class="govuk-heading-l">Appellant costs application documents</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <h2 class="govuk-heading-m">ph0-documentFileInfo.jpeg</h2>
                    <div class="govuk-form-group">
                        <input class="govuk-input" id="items[0][documentId]" name="items[0][documentId]"
                        type="hidden" value="d51f408c-7c6f-4f49-bcc0-abbb5bea3be6">
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset" role="group">
                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">Date received</legend>
                            <div class="govuk-date-input" id="items[0]receivedDate">
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items-0-received-date-day">Day</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                        id="items-0-received-date-day" name="items[0][receivedDate]-[day]" type="text"
                                        value="11" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items-0-received-date-month">Month</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                        id="items-0-received-date-month" name="items[0][receivedDate]-[month]"
                                        type="text" value="10" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items-0-received-date-year">Year</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                        id="items-0-received-date-year" name="items[0][receivedDate]-[year]" type="text"
                                        value="2023" inputmode="numeric">
                                    </div>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset">
                            <legend class="govuk-fieldset__legend">Redaction status</legend>
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]" name="items[0][redactionStatus]"
                                    type="radio" value="redacted">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]">Redacted</label>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-2" name="items[0][redactionStatus]"
                                    type="radio" value="unredacted">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-2">Unredacted</label>
                                </div>
                                <div class="govuk-radios__divider">Or</div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-4" name="items[0][redactionStatus]"
                                    type="radio" value="no redaction required" checked>
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-4">No redaction required</label>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET change-document-name/:folderId/:documentId should render change document page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Change document details</span>
            <h1 class="govuk-heading-l">Appellant costs application documents</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <h2 class="govuk-heading-m">ph0-documentFileInfo</h2>
                    <div class="govuk-form-group">
                        <input class="govuk-input" id="documentId" name="documentId" type="hidden"
                        value="d51f408c-7c6f-4f49-bcc0-abbb5bea3be6">
                    </div>
                    <div class="govuk-form-group">
                        <label class="govuk-label govuk-caption-m govuk-!-margin-bottom-3" for="file-name">File name</label>
                        <input class="govuk-input" id="file-name" name="fileName"
                        type="text" value="ph0-documentFileInfo">
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;
